// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary Correctly with 1 expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     totalling 
    $0.10
     
  </h4>
</div>
`;

exports[`Should render ExpensesSummary Correctly with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    10
     
    expenses
     totalling 
    $1.00
     
  </h4>
</div>
`;
